
Changes with Apache Libcloud in development

 *) Compute

   - Fix ex_delete_keypair method in the EC2 driver. (LIBCLOUD-415)
     [Oleg Suharev]

   - Add the following new extension methods for elastic IP management to the
     EC2 driver: ex_allocate_address, ex_disassociate_address,
     ex_release_address. (LIBCLOUD-417)
     [Patrick Armstrong]

Changes with Apache Libcloud 0.14.0-beta2

 *) Compute

   - Add log statements to our ParamikoSSHClient wrapper. This should make
     debugging deployment issues easier. (LIBCLOUD-414)
     [Tomaz Muraus]

   - Add new "NodeState.STOPPED" node state. Update HostVirual and EC2 driver to
     also recognize this new state. (LIBCLOUD-296)
     [Jayy Vis]

   - Add new Hong Kong endpoint to Rackspace driver.
     [Brian Curtin]

 *) Load Balancer

   - Add new Hong Kong endpoint to Rackspace driver.
     [Brian Curtin]

Changes with Apache Libcloud 0.14.0-beta1

 *) General

    - If the file exists, read pricing data from ~/.libcloud/pricing.json
      by default. If the file doesn't exist, fall back to the old behavior
      and use pricing data which is bundled with the release.
      [Tomaz Muraus]

    - Add libcloud.pricing.download_pricing_file function for downloading and
      updating the pricing file.
      [Tomaz Muraus]

 *) Compute

    - Refactor Rackspace driver classes and make them easier to use. Now there
      are two Rackspace provider constants - Provider.RACKSPACE which
      represents new next-gen OpenStack servers and
      Provider.RACKSPACE_FIRST_GEN which represents old first-gen cloud
      servers.

      Note: This change is backward incompatible. For more information on those
      changes and how to update your code, please visit "Upgrade Notes"
      documentation page - http://s.apache.org/lc0140un
      [Tomaz Muraus]

    - Deprecate the following EC2 provider constants: EC2_US_EAST,
      EC2_EU, EC2_EU_WEST, EC2_AP_SOUTHEAST, EC2_AP_NORTHEAST,